--- a/Server/package.json
+++ b/Server/package.json
@@ -19,9 +19,11 @@
     "homepage": "https://github.com/Asfa-wani/Capstone#readme",
     "dependencies": {
         "bcrypt": "^5.0.1",
+        "cookie-parser": "^1.4.6",
         "cors": "^2.8.5",
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
+        "express-jwt": "^5.3.1",
         "joi": "^17.6.0",
         "joi-password-complexity": "^5.1.0",
         "jsonwebtoken": "^8.5.1",
