--- a/Server/package.json
+++ b/Server/package.json
@@ -24,9 +24,11 @@
         "dotenv": "^16.0.1",
         "express": "^4.18.1",
         "express-jwt": "^5.3.1",
+        "formidable": "^2.0.1",
         "joi": "^17.6.0",
         "joi-password-complexity": "^5.1.0",
         "jsonwebtoken": "^8.5.1",
+        "lodash": "^4.17.21",
         "mongoose": "^6.4.6",
         "nodemon": "^2.0.19"
     }
