--- a/Server/package.json
+++ b/Server/package.json
@@ -25,6 +25,7 @@
         "express": "^4.18.1",
         "express-jwt": "^5.3.1",
         "formidable": "^2.0.1",
+        "fs": "^0.0.1-security",
         "joi": "^17.6.0",
         "joi-password-complexity": "^5.1.0",
         "jsonwebtoken": "^8.5.1",
